--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "jms/serializer-bundle": "^3.5",
         "nelmio/api-doc-bundle": "^3.6",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
